# axum-learning

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/html/: index.html
src/js/: index.js
